# hive-memo-rs

./: Cargo.toml  README.md
src/: encryption.rs  keys.rs  lib.rs  serialization.rs  varint.rs
tests/: keys_tests.rs  serialization_test.rs
