[package]
name = "hive_memo"
version = "0.1.0"
edition = "2021"
description = "A crate for encrypting and decrypting Hive Blockchain memos using elliptic curve cryptography and AES."
license = "MIT OR Apache-2.0"
repository = "https://github.com/leofinance/hive_memo"
homepage = "https://github.com/leofinance/hive_memo#readme"
documentation = "https://docs.rs/hive_memo"
keywords = ["encryption", "hive", "hive-blockchain", "memo", "aes", "ecdsa"]
categories = ["crypto", "hive"]
readme = "README.md"

authors = [
    "leofinance <contact@leofinance.com>",
    "denizyanbollu <yanbolludeniz@gmail.com>",
    "mrberenben <yanbolludeniz@gmail.com>",
]

[dependencies]
aes = "0.8"
block-modes = "0.8"
bs58 = "0.4"
bytes = "1.4"
k256 = { version = "0.11", features = ["ecdsa"] }
rand = "0.8"
ripemd = "0.6"
sha2 = "0.10"
hex = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
