[package]
name = "hive_memo"
version = "0.1.0"
edition = "2021"
description = "A crate for encrypting and decrypting Hive Blockchain memos using elliptic curve cryptography and AES."
license = "MIT OR Apache-2.0"
repository = "https://github.com/leofinance/hive_memo_rs"
homepage = "https://github.com/leofinance/hive_memo_rs#readme"
documentation = "https://docs.rs/hive_memo_rs"
keywords = ["encryption", "hive", "hive-blockchain", "memo", "aes", "ecdsa"]
categories = ["crypto", "hive"]
readme = "README.md"

authors = [
    "LeoFinance <contact@leofinance.com>",
    "Deniz Yanbollu <yanbolludeniz@gmail.com>",
    "mrberenben",
]

[dependencies]
secp256k1 = "0.24"
sha2 = "0.10"
aes = "0.7"
block-modes = "0.8"
base58 = "0.1"
thiserror = "1.0"
hex = "0.4"
bs58 = "0.5.1"
ripemd160 = "0.10.0"
k256 = { version = "0.10", features = ["ecdsa", "sha256", "ecdh"] }
ripemd = "0.1.3"
rand = "0.8.5"
bytes = "1.7.1"
varint = "0.2.0"
